--- a/style.css
+++ b/style.css
@@ -1,19 +1,29 @@
 body {
-	font: 14px Georgia, sans-serif;
+	font: 14px Helvetica, sans-serif;
 	color: white;
+	background-color: #244031;
 }
 
-button{
+button {
 	border-radius: 10px;
-	padding: 15px;
+	border: none;
+	padding: 15px 25px 15px 25px;
+	font: 14px Helvetica, sans-serif;
+}
+
+#btn {
+	margin: 0 auto;
+}
+
+#mainContainer {
+	width: 600px;
+	margin: 0 auto;
 }
 
 #ourTable {
-	background-color: #333333;
-	width: 45%;
-}
-.row {
-	display: table-row;
+	border: 5px;
+	border-radius: 5px;
+	background-color: black;
 }
 
 .propertyCell {
@@ -37,5 +47,5 @@ button{
 .buttonCell	{
 	display: table-cell;
 	width: 15%;
-	padding: 5px 15px 5px 15px;
+	padding: 1px 15px 1px 15px;
 }
